--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="container">
         <h1>To-Do List</h1>
+        <div class="list-container">
+            <input type="text" id="listName" placeholder="List name">
+            <button id="createList">Create List</button>
+        </div>
         <div class="input-container">
             <input type="text" id="task" placeholder="Add a new task">
             <button id="add">Add</button>
